2004-10-21  Chris Toshok  <toshok@ximian.com>

	* debug-helpers.c (append_class_name): argh, revert last patch.
	
2004-10-21  Chris Toshok  <toshok@ximian.com>

	* debug-helpers.c (append_class_name): use '+' as the delimiter,
	not '/', so that it matches what the debugger uses to look up
	methods.

2004-10-21  Martin Baulig  <martin@ximian.com>

	* mono-debug-debugger.c (mono_debugger_throw_exception): New
	public method; this is called each time an exception is thrown and
	allows the debugger to use exception catch points.

2004-10-21  Martin Baulig  <martin@ximian.com>

	* mono-debug-debugger.c (mono_debugger_handle_exception): Write
	the stack pointer and the exception object in some struct and pass
	that to the debugger.

2004-10-21  Chris Toshok  <toshok@ximian.com>

	* mono-debug-debugger.c (do_write_class): add instance/static
	event support.  We don't expose "raise" or "other" yet.
	(event_is_static): new method.

2004-10-20  Bernie Solomon  <bernard@ugsolutions.com>

	* mono-debug-debugger.c
	(mono_debugger_handle_exception): Remove
	bogus return value for fussy compilers.

2004-10-20  Martin Baulig  <martin@ximian.com>

	* mono-debug-debugger.c
	(mono_debugger_unhandled_exception): Added `gpointer stack' argument.
	(mono_debugger_handled_exception): Likewise.

2004-10-20  Martin Baulig  <martin@ximian.com>

	* mono-debug-debugger.h (MonoDebuggerEvent): Added
	MONO_DEBUGGER_EVENT_EXCEPTION.

	* mono-debug-debugger.c (mono_debugger_handle_exception): New
	public function to send the debugger a notification for an
	exception and inform it about a catch/finally clause.

2004-10-19  Zoltan Varga  <vargaz@freemail.hu>

	* marshal.c, icall.c: Applied patch from Alexandre Rocha Lima e
	Marcondes (alexandremarcondes@psl-pr.softwarelivre.org). Really
	fix 2.95 build.	

	* icall.c (ves_icall_InternalExecute): Fix build for gcc-2.95.

2004-10-18  Zoltan Varga  <vargaz@freemail.hu>

	* marshal.c (emit_marshal_object): Fix freeing of memory when a reference type is